quick edits and version

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -8,6 +8,7 @@ layout: post
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
+
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
 -   [Exploring issues and context from practitioner interviews and
@@ -116,27 +117,25 @@ Moved impact of software tools here - and overall on templated approach on a mic
 
 This chapter
 
-- exposes motivations, tactics for and barriers to undertaking activity this domain from interviews with peer practitioners (supplementing the literature review)
-- Introduces the use of design patterns and collections of patterns, as the germ cell of activity which then expands in different directions.
-- gives an overview of the evolution of the key pedagogical features of the learning design used in the research process
+<!-- - exposes motivations, tactics for and barriers to undertaking activity this domain from interviews with peer practitioners (supplementing the literature review) -->
+
+- gives an overview of the evolution of the key pedagogical features of the tools of learning design used in my research process
 - draws on immediate analysis of participants reactions and contributions from journal notes, and participant interviews and analysis of changes in the learning resources created to present an exploration of tensions
 - outlines 3 key conflicts using the terminology of Saninno in TADS
 - Presents a synthesis to initial barriers (and) tactics to overcome them
+
+<!-- - Introduces the use of design patterns and collections of patterns, as the germ cell of activity which then expands in different directions. -->
 
 This chapter has a particular focus on the tools and authenticity in relation to other tools. This focus develops a thread of theoretical inquiry around the impact of authenticity of tools and processes in activity systems of learners experiences of activity systems and particular on building agency in
 
 
 Due to the novel nature of the learning design the detailed outline of the specifics of the participants experience of the design are important to situate findings in the following two chapters.
 
-**Key questions / motivations in creating a new learning community**
+<!-- The game making community is not authentic or mature in the practices they are undertaking, the kind of community practices which we can undertake are focused partly on building connections to existing knowledge and practice. -->
 
-The game making community is not authentic or mature in the practices they are undertaking, the kind of community practices which we can undertake are focused partly on building connections to existing knowledge and practice.
+<!-- One of my roles as designer here was to uncover and to help participants explore knowledge that they were unaware they possessed. Another was to help support the development of peer learning practices and in order to do that help foster a creative environment which suited that. -->
 
-One of my roles as designer here was to uncover and to help participants explore knowledge that they were unaware they possessed. Another was to help support the development of peer learning practices and in order to do that help foster a creative environment which suited that.
-
-As explored in the literature review, there is a wide gap between instruction based tutorials and unguided project challenges. Even with the process driven scaffolding that a working knowledge of PBL approaches provides, the domain specific knowledge and practices can be a significant challenge for teachers. Thus project work which can place a high demand on the project facilitator/s.
-
-This chapter charts the evolution of resources which occupy this middle ground between instruction and free choice creative approaches.
+As explored in the literature review, there is a wide gap between instruction based tutorials and unguided project challenges. Even with the process driven scaffolding that a working knowledge of PBL approaches provides, the domain specific knowledge and practices can be a significant challenge for teachers. Thus project work which can place a high demand on the project facilitator/s. This chapter charts the evolution of tools and resources which occupy this middle ground between instruction and free choice creative approaches. Following chapters explore the impact and resulting pedagogies in more depth.
 
 <!-- **Methodology for exposing tensions**
 
@@ -413,7 +412,7 @@ Later larger contradictions of different scope are signposted and one key contra
 see updated table in tables subdirectory  
 -->
 
-The following table is provided to give the reader an overview of the stages and tools used. Emerging tensions in activity systems are used to explore the rationale for the creation and selection of these tools.
+The following table is provided to give the reader an overview of the stages and tools used. Emerging tensions in activity systems are used to explore the rationale for the creation and selection of these tools. Short descriptions of the tools used at each stage and links to the online resources created are available as appendix 4.x
 
 <!-- Table from
 https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/edit# -->
@@ -486,7 +485,7 @@ The starting game template included a minimal amount of platforms, hazards to av
 
 As preThe possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure.
 
-The vignette in the last chapter saw Toby's adding new levels to his game and undertaking many iterations of changes to the level design. He and several other participants spent extensive time performing level design activity with a goal of making the game extremely challenging but still technically possible. Others played with the convention of the game by removing all hazards and filling the screen with rewards/coins (an example is outlined in the starting vignette of the next chapter).
+The vignette in the last chapter saw Toby's adding new levels to his  game and undertaking many iterations of changes to the level design. He and several other participants spent extensive time performing level design activity with a goal of making the game extremely challenging but still technically possible. Others played with the convention of the game by removing all hazards and filling the screen with rewards/coins (an example is outlined in the starting vignette of the next chapter).
 
 **Incomplete graphical blocks & Piskel**
 
@@ -572,14 +571,15 @@ The value of playfulness is illustrated with one exit interview with a parent wh
 
 In my journal notes I reflect that his incident happened during a session where I had not played customary drama games to create an inclusive environment. That week I had omitted them as I felt a sense of urgency coming from families to solve their problems. The scarcity in facilitator time drove me to crack on supporting families to debug code errors.
 
-In previous sessions, members of this family were able to engage in planing via sketching on paper and in creating pixel art. Hoever in later sessions, they were reliant on others to implement code changes for their imagined game due to way the improvised group roles had emerged.
+In previous sessions, members of this family were able to engage in planing via sketching on paper and in creating pixel art. However in later sessions, they were reliant on others to implement code changes for their imagined game due to way the improvised group roles had emerged.
 
 The freedom of choice and imagination allowed by designing on paper and via pixel art created compounding tensions. One crisis point involved a frustration of a child who was not able to implement a feature they wanted to add to the game next.
 
 DEVELOP WITH LIT
 To briefly summarise this dynamic using the language of 3GAT and agency we can say... x, y z
 
-This aligns with research in this area explored in the LR which concieves coding practices as alien to certain groups in particular, and stress the importance of x.
+This aligns with research in this area explored in the LR which conceive coding practices as alien to certain groups in particular, and stress the import ance of x.
+DEVELOP THIS IN LIT REVIEW - Start here [@kafai_constructionist_2015-1]
 
 I have shared the crisis of this family in particular, as the process drove me to focus on and further develop inclusive cultural practices which are explored in chapter six.
 
@@ -593,7 +593,7 @@ This conflict provoked me to create resources which could serve to pull particip
 
 SIGNPOSTING WHY THIS SECTION IS USEFUL HERE
 
-NOTE - There are two sides of contracticition, one is the clash between curricullum and choice, the other is in my hesitancy introducing aciviites using the new tools of the maps due to potential overload and not enough time.
+NOTE - There are two sides of contradiction, one is the clash between curriculum and choice, the other is in my hesitancy introducing activities using the new tools of the maps due to potential overload and not enough time.
 
 <!-- stylised in a way that mirrored a map used for navigation in a quest-themed computer game.
 
@@ -727,7 +727,7 @@ While this element of the learning design is beyond the main remit of this study
 
 #### Resolving the conflict in an informal setting by ignoring it
 
-My progress in this study would have been more direct if I had not attempted to resolve the conflict between the informal choice and curriculum alignment. Ultimately, despite develping resources, I did not introduce the resources consistently with the learners of this study, instead prioritising time spent in on-going hands on experimentation, peer learning and playful activities.
+My progress in this study would have been more direct if I had not attempted to resolve the conflict between the informal choice and curriculum alignment. Ultimately, despite developing resources, I did not introduce the resources consistently with the learners of this study, instead prioritising time spent in on-going hands on experimentation, peer learning and playful activities.
 
 In retrospect, this decision is appropriate to the informal context of this environment and reflects the lack of external motivation to align to curricular concepts.
 
@@ -926,13 +926,9 @@ that had a high impact on the game experiences. These include changing gravity, 
 
 **Variable editing for player movement**
 
-The starting template began with the game in a broken state. The
+The starting template began with the game in a broken state. Participants needed to change the code to allow effective player movement. This thus forced all participants to alter at least one of the key variables were highlighted at the very start of the game code.
 
-Participants needed to change the code to allow effective player movement. This thus forced all participants to alter at least one of the key variables were highlighted at the very start of the game code.
-
-Following this first change however behaviour varied greatly.
-
-While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement.
+Following this first change however behaviour varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement.
 
 **Level design and prototyping**
 
@@ -1030,11 +1026,13 @@ As explored in the literature review (check this), the use of code examples or s
 
 These code examples allow users to see the behaviour in context with the code and output side by side. While code examples existed on the Phaser website, their use there is not consistent or structured for novices.
 
-In P1, I had encouraged the use of existing resources via google searches and searching developer resources the Phaser examples [^11]. The introduction of this process caused significant additional tensions and confusions. As with many developer created documentation, focused on demonstrating the code constructs in isolation rather than in the context of any particular game. In addition, any varience of
+In P1, I had encouraged the use of existing resources via google searches and searching developer resources the Phaser examples [^11]. The introduction of this process caused significant additional tensions and confusions. As with many developer created documentation, focused on demonstrating the code constructs in isolation rather than in the context of any particular game.
 
-Initially, I try to counter this by creating one off documents withthe reelvant code which needed to be copied and pasted into their game[^12]. This seemed also unsatisfactory.
+On several occasions in P1 I observed participants struggling when faced with code examples illustrating a desired feature but within a different structure of project. The competency to overlook the concrete differences in code structure to abstract the principles away and then apply those principles to the existing structure of their code project seemed too ambitious for this group of novices.
 
-Instead I began to create code snippets which shared the struture of starter game template and added only the code needed for the additional requested functionality. .
+Initially, I responded by creating one off documents with the relevant code which needed to be copied and pasted into their game[^12]. This seemed also unsatisfactory.
+
+Instead I began to create code snippets which shared the structure of starter game template and added only the code needed for the additional requested functionality. .
 
 My rationale was that each pattern added builds familiarity with the code structure. feedback from P1 and video evidence as in Toby's proficiency supports this observation.
 
@@ -1053,7 +1051,7 @@ However, as these tutorials took as a starting point the code of the starting te
 
 <!-- **Meeting yourself in the middle**
 However, as these tutorials took as a starting point the code of the starting template and did not attempt to explain that, they  did not however resolve the issue of participants wanting resources that explained these core constructs and underlying concepts.
-
+b
 Thus I created opening chapter of the online manual which were more traditional in format and contained foundational knowledge. I wondered how to best frame the relationship between these chapters and the self-contained ones described above. In practice, as user had started with a template game that is already up and running, to use this resources which would have involved backtracking.
 
 
@@ -1279,18 +1277,23 @@ The particular nature of the informal setting with the participation of engaged 
 
 ### Link to next chapter
 
-This chapter has dealt with the evolution of design in initial phases and responses to learner experience to resolve tensions. A key focus of this chapter has been relatively micro - barriers to computer coding and use of particular software - drawing on and aligning with the HCI literature and existing work which exposes problems of learning programming syntax.
+This chapter has dealt with the evolution of design in initial phases and responses to learner experience to resolve tensions. A key focus of this chapter has been  barriers to computer coding and use of particular software.
 
-LINK -
-While Resnick's principles are useful for the designer of the learning experience, they are less accessible to the end user. Resnick's work is heavily focused on the affordances of the tool for the general purposes of media creation. This leaves the responsibility for teachers to fill in how production is guided.
+Retrospective analysis of my design naive approach exposes parallels with the HCI literature, constructionist principles and research on learning programming syntax. DEVELOP
 
-The next chapter explores one element on this guidance for this programme in the use of a pattern approach in adding game elements to add to the design in the form of GDPs.
+Resnick's design principles are focused on the affordances of tool for creative experimentation and expression via media authoring.
 
-Pivot to next chapter,
+The emphasis is on tools that can remove barriers to personal expression, rather than on pedagogic processes than can help teachers facilitate guided production. Viewed from a lens of situated, community driven production, there is a potential critique that these processes are under-explored in the school of constructionism.
+
+The following chapters have a focus on this gap.
+
+The next chapter explores a potentially fruitful aspect to help guidance for educational practitioners. The use of a design pattern approach. In this study the patterns take the form of working with common game elements game design patterns. In the language of the theoretical framework, I explore the process of working with GPDs as a germ cell of the overall game making activity.
+
+<!-- Pivot to next chapter,
 
   - This chapter is limited in the video data and close exploration of the
   - In analysis of data from video other more social factors were given priority - based on the key interests of this study
-  - Returning to Rogoff's 2 lenses, while this as focused on a personal, the next is social and the one after is more cultural in nature.
+  - Returning to Rogoff's 2 lenses, while this as focused on a personal, the next is social and the one after is more cultural in nature. -->
 
 <!--
 NOTE - In the following chapters, social and cultural lenses are used to analyse video data. -->
