--- a/_posts/thesis_chapters/2023-9-5-Gdps.md
+++ b/_posts/thesis_chapters/2023-9-5-Gdps.md
@@ -162,6 +162,9 @@ The theoretical framework invites discussion on what is the germ cell of the ove
 
 While this concept is more typically used in a larger scope of societal activity, the principles apply this smaller scope. The core concept of altering a game at the level of gameplay design pattern which emerged from experimental pilot process is adapted by participants and used in various forms of activity.
 
+Blunden cites the process of identifying a germ cell of activity as a fruitful process for researchers [FIND]. In addition, Engestrom frames expansive learning as instructive for organisational change. While research is more sparse in the field of educational practice, the s
+
+
 The concept of germ cell is relevant here as the same germ of an idea yeilded varied forms of support.
 
 
