on activity scopes

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -265,9 +265,12 @@ The following vignette, consisting of extracts of participant activity over 20 m
 
 https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/edit
 
-### Commentary on Vignette
+### Description of levels of activity illustrated using the vignette
 
 This sections outlines a short description of the vignette above focusing on the overall activity and its place within evolution of learning design. It will use concepts from activity theory to describe elements of the activity system. Activity theory allows researchers to identify intersecting or nested systems of activity with varied goals. Subsequent analysis of the identified activity systems allows both the researcher and practitioner to identifying existing and emerging tensions and to thus observe (spontaneous) or plan (designed) responses. While this chapter focuses primarily on the tools and resources, future chapter also draw on this framework for wider analysis.
+
+ALTERNATIVE SIMPLIER INTRO TO THIS SECTION
+The following sections outline different scopes of activity to ground the reader in the overall activity and introduce later tensions between system elements. Each section follows a pattern: the activity is described in general, then examples of activity at that scope from the vignette above are described, ending with brief analysis or signposting to where the activity in explored in greater depth.
 
 <!-- The following descriptions mirror the work of AT researchers who conceptualise scope of activity as concentric circles from Broffennbrenner with "larger" scopes of cultural and societal goals and smaller, narrower, lower scopes of more personal activity [Engestrom][Cole]. -->
 
